--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,8 @@
     <!-- Normalize.css -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <!-- Main CSS -->
-    <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+    <!-- <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}"> -->
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
     <meta name="viewport" content="width=device-width">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
@@ -17,7 +18,7 @@
     <!-- <header class="header"> -->
         <div class="container2">
             <div class="header">
-                <a href="/" class="hvr-sweep-to-right">
+                <a href="{{ site.baseurl }}/" class="hvr-sweep-to-right">
                   {{ site.title }}
                 </a>
             </div>
