--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,8 +7,8 @@
     <!-- Normalize.css -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <!-- Main CSS -->
-    <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-    <link rel="stylesheet" href="{% raw %}{{ site.baseurl }}/assets/css/main.css{% endraw %}">
+    <!-- <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}"> -->
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
     <meta name="viewport" content="width=device-width">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
@@ -18,12 +18,13 @@
     <!-- <header class="header"> -->
         <div class="container2">
             <div class="header">
-                <a href="/" class="hvr-sweep-to-right">
+                <a href="{{ site.baseurl }}/" class="hvr-sweep-to-right">
                   {{ site.title }}
                 </a>
             </div>
         </div>
     <!-- </header> -->
+
     <p></p>
 
     <div class="container1">
@@ -32,9 +33,9 @@
     <div class="leftbox">
       <div class="book">
         {% if page.thumb %}
-        <img src="{{ page.thumb }}" style="width:250px;">
+        <img src="{{ site.baseurl }}{{ page.thumb }}" style="width:250px;">
         {% else %}
-        <img src="/assets/images/blank-1157886_1280.jpg" style="width:250px;">
+        <img src="{{ site.baseurl }}/assets/images/blank-1157886_1280.jpg" style="width:250px;">
         {% endif %}
       </div>
     </div>
