--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <!-- Main CSS -->
     <!-- <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}"> -->
+    <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
     <meta name="viewport" content="width=device-width">
