--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,9 +7,7 @@
     <!-- Normalize.css -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <!-- Main CSS -->
-    <!-- <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}"> -->
-    <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
+    <link rel="stylesheet" href="{{ root_url }}/assets/css/main.css">
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
     <meta name="viewport" content="width=device-width">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
